--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,19 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    background-color:#f7f7f7;
+}
+.companyTitle{
+    display : flex;
+    flex-direction: row;
+
+}
+
+.companyTitle img{
+    height: 60px;
+    width : 60px;
+    border-radius: 50%;
+    padding: 5px
 }
 
 .topBarSection {
@@ -18,12 +31,25 @@ body {
     top: 0;
     left: 0;
     z-index: 100;
-    background-color: white;
+    background-color: #ff6b35;
+   font-weight: bolder;
 }
 
+
+
 .companyTitle h2 {
-    color: green;
+    /* color: rgb(251, 247, 247); */
+    font-family: "Monoton", sans-serif;
+    font-weight: 400;
+    font-style: normal;
     text-decoration: none;
+    font-weight: 600;
+    margin-left: 5px;
+}
+.searchBar input{
+    border-radius: 10px;
+    padding: 5px;
+    text-align: center;
 }
 
 .topimg{
@@ -36,16 +62,31 @@ body {
     display: flex;
     width: 100%;
     margin-top: 100px;
+    overflow: hidden;
+    position: relative;
+
 }
 
 .gallery {
     width: 150px;
+    animation: scrollLeft 10s linear infinite;
+    
 }
 
 .gallery img {
     width: 100%;
+    border-radius: 5px;
+   
 }
 
+@keyframes scrollLeft {
+    0% {
+        transform: translateX(100%);
+    }
+    100% {
+        transform: translateX(-100%);
+    }
+}
 
 /* landingPage */
 
@@ -65,6 +106,7 @@ body {
 
 .vendorBox {
     border-radius: 10px;
+    
 }
 
 .vendorBox img {
@@ -74,6 +116,8 @@ body {
     margin-right: 30px;
     object-fit: cover;
     border-radius: 10px;
+    border: 3px solid #e99a7d;
+    padding: 2px
 }
 
 .btnSection {
@@ -118,18 +162,26 @@ body {
     /* color: white; */
 
 }
+.firmGroupBox{
+    border : 3px solid #e99a7d;
+    text-align: center;
+    border-radius: 10px;
+    padding : 5px;
+}
 
 .firmGroup {
     position: relative;
 }
 
 .firmGroup img {
-    width: 240px;
+    width: 100%;
     height: 180px;
     flex: 0 0 auto;
     margin-right: 30px;
     object-fit: cover;
     border-radius: 10px;
+    
+    
 }
 
 .firmDetails {
@@ -138,7 +190,7 @@ body {
 
 .firmOffer {
     width: 100%;
-    max-width: 85%;
+    max-width: 100%;
     position: absolute;
     bottom: 5px;
     padding-left: 10px;
@@ -146,8 +198,8 @@ body {
     font-weight: 800;
     padding-bottom: 10px;
     padding-top: 20px;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+    /* border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px; */
     background: transparent;
     background: linear-gradient(to bottom, rgba(50, 0, 0, 0.08), black);
     color: white;
@@ -164,7 +216,7 @@ body {
 }
 
 .activeButton {
-    background-color: green;
+    background-color: #ff6b35;
     color: white;
     font-weight: bold;
     border-radius: 50px;
@@ -203,7 +255,7 @@ body {
     text-align: center;
     background-color: white;
     border-radius: 5px;
-    color: green;
+    color: rgb(235, 170, 105);
     position: absolute;
     bottom: 10px;
     width: 100%;
